--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@excalidraw/excalidraw": "^0.17.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.2.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
