--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,12 @@
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
   },
   "dependencies": {
-    "chokidar": "^4.0.3",
+    "@types/fb-watchman": "^2.0.5",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "fb-watchman": "^2.0.2",
     "multer": "^1.4.5-lts.1",
+    "nsfw": "^2.2.5",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
