--- a/backend/package.json
+++ b/backend/package.json
@@ -2,15 +2,15 @@
   "name": "backend",
   "version": "1.0.0",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "build": "node build.js",
+    "start": "node dist/server.js"
   },
   "dependencies": {
     "@types/fb-watchman": "^2.0.5",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "fb-watchman": "^2.0.2",
     "multer": "^1.4.5-lts.1",
-    "nsfw": "^2.2.5",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
@@ -18,6 +18,7 @@
     "@types/express": "^5.0.0",
     "@types/multer": "^1.4.12",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "esbuild": "^0.19.11"
   }
 }
