--- a/backend/package.json
+++ b/backend/package.json
@@ -8,17 +8,22 @@
   },
   "dependencies": {
     "@types/fb-watchman": "^2.0.5",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "express-jwt": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
+    "esbuild": "^0.19.11",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.2",
-    "esbuild": "^0.19.11"
+    "typescript": "^5.8.2"
   }
 }
