--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@excalidraw/excalidraw": "^0.18.0",
     "@uiw/react-md-editor": "^4.0.5",
+    "axios": "^1.8.4",
     "lodash": "^4.17.21",
     "pdfjs-dist": "^4.10.38",
     "react": "^18.3.1",
