--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "express": "^4.21.2",
     "express-jwt": "^8.5.1",
     "jsonwebtoken": "^9.0.2",
+    "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.8.1"
   },
@@ -21,6 +22,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/ms": "^2.1.0",
     "@types/multer": "^1.4.12",
     "esbuild": "^0.19.11",
     "ts-node-dev": "^2.0.0",
