--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@uiw/react-md-editor": "^4.0.5",
     "axios": "^1.8.4",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.483.0",
     "pdfjs-dist": "^4.10.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
