--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "@excalidraw/excalidraw": "^0.18.0",
@@ -16,6 +17,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.483.0",
     "pdfjs-dist": "^4.10.38",
+    "prettier": "^3.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.2.0",
