--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -10,6 +10,13 @@ dist
 uploads/*
 files/*
 
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
