--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "@types/fb-watchman": "^2.0.5",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^17.0.1",
     "express": "^4.21.2",
     "express-jwt": "^8.5.1",
     "jsonwebtoken": "^9.0.2",
