--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@excalidraw/excalidraw": "^0.18.0",
-    "@uiw/react-md-editor": "^4.0.7",
+    "@uiw/react-markdown-editor": "^6.1.4",
     "axios": "^1.8.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.483.0",
