--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^17.0.1",
     "express": "^4.21.2",
     "express-jwt": "^8.5.1",
+    "express-rate-limit": "^7.5.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
@@ -27,6 +29,8 @@
     "@types/multer": "^1.4.12",
     "esbuild": "^0.19.11",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "@types/helmet": "^4.0.0",
+    "@types/express-rate-limit": "^6.0.2"
   }
 }
